[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/WaveBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/mine.png" type="Texture" id=4]
[ext_resource path="res://Textures/HUD/restart_button1.png" type="Texture" id=5]
[ext_resource path="res://Textures/HUD/restart_button2.png" type="Texture" id=6]
[ext_resource path="res://Textures/spaceship.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Engine.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Shield.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Robots/HealthRobot.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Robots/ShieldRobot.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 45
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Game_HUD" type="Node2D" parent="."]
editor/display_folded = true

[node name="Score_lbl" type="Label" parent="Game_HUD"]
margin_left = 60.0
margin_right = 220.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1

[node name="WaveBar" parent="Game_HUD" instance=ExtResource( 3 )]
margin_left = 270.0
margin_top = 12.0
margin_right = 340.0
margin_bottom = 26.0

[node name="Wave_lbl" type="Label" parent="Game_HUD"]
margin_left = 420.0
margin_right = 580.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Wave: 0"
align = 1
valign = 1

[node name="mine_sprite" type="Sprite" parent="Game_HUD"]
position = Vector2( 280, 60 )
texture = ExtResource( 4 )

[node name="Mine_lbl" type="Label" parent="Game_HUD"]
margin_left = 300.0
margin_top = 40.0
margin_right = 380.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "x 0"
align = 1
valign = 1

[node name="GameOver_HUD" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="GameOver_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 200.0
margin_top = 180.0
margin_right = 440.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="HighScore_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 220.0
margin_top = 280.0
margin_right = 420.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 3 )
text = "High Score: 0"
align = 1
valign = 1

[node name="BestWave_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 220.0
margin_top = 340.0
margin_right = 420.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 3 )
text = "Best Wave: 0"
align = 1
valign = 1

[node name="Restart_btn" type="Button" parent="GameOver_HUD"]
margin_left = 300.0
margin_top = 400.0
margin_right = 340.0
margin_bottom = 440.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="Wave_HUD" type="Node2D" parent="."]
editor/display_folded = true

[node name="Wave_Start_lbl" type="Label" parent="Wave_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 8 )
text = "Wave"
align = 1
valign = 1

[node name="Wave_Completed_lbl" type="Label" parent="Wave_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 8 )
text = "Wave Completed"
align = 1
valign = 1

[node name="DogFight_HUD" type="Node2D" parent="."]
editor/display_folded = true

[node name="DF_Start_lbl" type="Label" parent="DogFight_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 8 )
text = "Dog Fight"
align = 1
valign = 1

[node name="DF_Over_lbl" type="Label" parent="DogFight_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 8 )
text = "Dog Fight Over"
align = 1
valign = 1

[node name="Warning_HUD" type="Node2D" parent="."]
editor/display_folded = true

[node name="Out_of_Ammo_lbl" type="Label" parent="Warning_HUD"]
visible = false
margin_left = 240.0
margin_top = 580.0
margin_right = 400.0
margin_bottom = 620.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.807843, 0.25098, 0.25098, 1 )
text = "Out of Ammo"
align = 1
valign = 1

[node name="Upgrade_HUD" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="Panel" type="Panel" parent="Upgrade_HUD"]
modulate = Color( 0.384314, 0, 0.643137, 1 )
show_behind_parent = true
margin_left = 60.0
margin_top = 80.0
margin_right = 580.0
margin_bottom = 560.0

[node name="Title" type="Label" parent="Upgrade_HUD"]
margin_left = 220.0
margin_top = 120.0
margin_right = 418.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 10 )
text = "Upgrade Ship"
align = 1
valign = 1

[node name="SpaceShip" type="Sprite" parent="Upgrade_HUD"]
editor/display_folded = true
position = Vector2( 320, 296.107 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="Engine" parent="Upgrade_HUD/SpaceShip" instance=ExtResource( 8 )]
position = Vector2( 0.0463257, 14.0268 )
scale = Vector2( 0.5, 0.75 )

[node name="Shield" parent="Upgrade_HUD/SpaceShip" instance=ExtResource( 9 )]
position = Vector2( 0.475014, 2.02682 )
scale = Vector2( 1.50325, 1.5 )

[node name="HealthRobot" parent="Upgrade_HUD/SpaceShip" instance=ExtResource( 10 )]
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 1, 1, 1, 1 )
margin_left = -19.525
margin_top = 30.7125
margin_right = 12.475
margin_bottom = 62.7125

[node name="ShieldRobot" parent="Upgrade_HUD/SpaceShip" instance=ExtResource( 11 )]
modulate = Color( 1, 1, 1, 1 )
self_modulate = Color( 1, 1, 1, 1 )
margin_left = 4.47501
margin_top = 30.7125
margin_right = 36.475
margin_bottom = 62.7125

[node name="Durability" type="Node2D" parent="Upgrade_HUD"]
editor/display_folded = true
position = Vector2( 140, 456.107 )

[node name="Durability_lbl" type="Label" parent="Upgrade_HUD/Durability"]
margin_left = -60.0
margin_top = -40.0
margin_right = 80.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 11 )
text = "Durability: 100"
align = 1
valign = 1

[node name="Durability_but" type="Button" parent="Upgrade_HUD/Durability"]
margin_left = -60.0
margin_top = 3.0
margin_right = 80.0
margin_bottom = 40.0
text = "Upgrade(250 Mines)"

[node name="Shield" type="Node2D" parent="Upgrade_HUD"]
editor/display_folded = true
position = Vector2( 480, 456.107 )

[node name="Shield_lbl" type="Label" parent="Upgrade_HUD/Shield"]
margin_left = -60.0
margin_top = -40.0
margin_right = 80.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 11 )
text = "Shield: 50"
align = 1
valign = 1

[node name="Shield_but" type="Button" parent="Upgrade_HUD/Shield"]
margin_left = -60.0
margin_top = 3.0
margin_right = 80.0
margin_bottom = 40.0
text = "Upgrade(150 Mines)"

[connection signal="pressed" from="GameOver_HUD/Restart_btn" to="." method="_on_Restart_btn_pressed"]
