[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/WaveBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/HUD/restart_button1.png" type="Texture" id=4]
[ext_resource path="res://Textures/HUD/restart_button2.png" type="Texture" id=5]
[ext_resource path="res://Textures/mine.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 45
outline_size = 1
font_data = ExtResource( 2 )

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="Game_HUD" type="Node2D" parent="."]

[node name="Score_lbl" type="Label" parent="Game_HUD"]
visible = false
margin_left = 60.0
margin_right = 220.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1

[node name="WaveBar" parent="Game_HUD" instance=ExtResource( 3 )]
visible = false
margin_left = 270.0
margin_top = 12.0
margin_right = 340.0
margin_bottom = 26.0

[node name="Wave_lbl" type="Label" parent="Game_HUD"]
visible = false
margin_left = 420.0
margin_right = 580.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Wave: 0"
align = 1
valign = 1

[node name="Pause_btn" type="Button" parent="Game_HUD"]
margin_left = 582.0
margin_top = 6.18594
margin_right = 632.0
margin_bottom = 46.1859
text = "Pause"

[node name="GameOver_HUD" type="Node2D" parent="."]
visible = false

[node name="GameOver_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 200.0
margin_top = 180.0
margin_right = 440.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="HighScore_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 220.0
margin_top = 280.0
margin_right = 420.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 3 )
text = "High Score: 0"
align = 1
valign = 1

[node name="Fail_lbl" type="Label" parent="GameOver_HUD"]
margin_left = 220.0
margin_top = 322.08
margin_right = 420.0
margin_bottom = 362.08
custom_fonts/font = SubResource( 4 )
text = "Fail: 0"
align = 1
valign = 1

[node name="Restart_btn" type="Button" parent="GameOver_HUD"]
margin_left = 300.0
margin_top = 400.0
margin_right = 340.0
margin_bottom = 440.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="Wave_HUD" type="Node2D" parent="."]

[node name="Wave_Start_lbl" type="Label" parent="Wave_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Wave"
align = 1
valign = 1

[node name="Wave_Completed_lbl" type="Label" parent="Wave_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Wave Completed"
align = 1
valign = 1

[node name="Meteor_Shower_HUD" type="Node2D" parent="."]

[node name="Meteor_Shower_Start_lbl" type="Label" parent="Meteor_Shower_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Meteor Shower"
align = 1
valign = 1

[node name="Meteor_Shower_Over_lbl" type="Label" parent="Meteor_Shower_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Meteor Shower Ended"
align = 1
valign = 1

[node name="DogFight_HUD" type="Node2D" parent="."]

[node name="DF_Start_lbl" type="Label" parent="DogFight_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Dog Fight"
align = 1
valign = 1

[node name="DF_Over_lbl" type="Label" parent="DogFight_HUD"]
visible = false
margin_left = 220.0
margin_top = 300.0
margin_right = 420.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 9 )
text = "Dog Fight Over"
align = 1
valign = 1

[node name="Warning_HUD" type="Node2D" parent="."]

[node name="Out_of_Ammo_lbl" type="Label" parent="Warning_HUD"]
visible = false
margin_left = 240.0
margin_top = 580.0
margin_right = 400.0
margin_bottom = 620.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.807843, 0.25098, 0.25098, 1 )
text = "Out of Ammo"
align = 1
valign = 1

[node name="Paused_HUD" type="Node2D" parent="."]
pause_mode = 2
visible = false

[node name="Paused_lbl" type="Label" parent="Paused_HUD"]
margin_left = 200.0
margin_top = 208.215
margin_right = 440.0
margin_bottom = 268.215
custom_fonts/font = SubResource( 11 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="Continue_btn" type="Button" parent="Paused_HUD"]
margin_left = 242.0
margin_top = 280.0
margin_right = 400.0
margin_bottom = 320.0
text = "Continue Game"

[node name="UpgradeShip_btn" type="Button" parent="Paused_HUD"]
visible = false
margin_left = 242.489
margin_top = 340.0
margin_right = 400.489
margin_bottom = 380.0
text = "Upgrade Ship"

[node name="Info_HUD" type="Node2D" parent="."]

[node name="Mine_info" type="Node2D" parent="Info_HUD"]
position = Vector2( 340, 60 )

[node name="mine_sprite" type="Sprite" parent="Info_HUD/Mine_info"]
position = Vector2( -40, 0 )
texture = ExtResource( 12 )

[node name="Mine_lbl" type="Label" parent="Info_HUD/Mine_info"]
margin_left = -20.0
margin_top = -20.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "x 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Game_HUD/Pause_btn" to="." method="_on_Pause_btn_pressed"]
[connection signal="pressed" from="GameOver_HUD/Restart_btn" to="." method="_on_Restart_btn_pressed"]
[connection signal="pressed" from="Paused_HUD/Continue_btn" to="." method="_on_Continue_btn_pressed"]
